syntax = "proto3";

import "google/protobuf/empty.proto";



package messenger;

/**
 * Services that the bot service provides to the rest of the infrastructure
 */
service Messenger {
  rpc SendTestMessage (TestMessageRequest) returns (google.protobuf.Empty);
}

message TestMessageRequest {
  string chatId = 1;
  string text = 2;
}


enum MessageType {
  PLAIN = 0;
  MARKDOWN = 1;
}
