syntax = "proto3";

import "google/protobuf/empty.proto";

/**
 * # New user start conversation with bot
 * 1. Messenger asks the backed for missing location
 * 2. If some thingy are missing locations, return to the messenger the uuids
 * 3. Like 'new location' scenario (of messenger), starting from point 2
 */

/**
 * Implemented by the backend
 */
service ThingyPersistence {
    rpc GetPendingLocation (google.protobuf.Empty) returns (stream ThingyLocation);
    rpc SetNewLocation (ThingyLocation) returns (google.protobuf.Empty);
    rpc SetNewValue (ThingyValue) returns (google.protobuf.Empty);
}


message ThingyLocation {
    string thingy_uuid = 1;
    string location = 2;
}

message ThingyValue {
    string thingy_uuid = 1;
    string value = 2;
    enum EnvParam {
        TEMPERATURE = 0;
        HUMIDITY = 1;
        AIR_QUALITY = 2;
        AIR_PRESSURE = 3;
        CO2_EQUIV = 4;
        LIGHT = 5;
    }
    EnvParam env_param = 3;
}
